<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="events">Events</string>
    <string name="favorites">Favorites</string>
    <string name="inbox">Inbox</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_school">My School</string>
    <string name="add_school">Add School</string>
    <string name="info">How To Use Application</string>
    <string name="logout">Logout</string>
    <string name="menu_task">MENU TASK</string>
    <string name="user_name">UserName</string>
</resources>
